--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,170 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.scrollwrap {
+  background: url(./img/bg-content-960.jpg) center repeat-y;
+  background-size: 100% auto;
+  box-shadow: 0 0 4px 2px rgba(0,0,0,0.5);
+  margin: 0 auto;
+  padding-bottom: 30px;
+  width: 960px;
+}
+.logo{
+  margin: 20px;
+}
+
+.navarea{
+  display: flex;
+  align-items: center;
+}
+
+.navbutton{
+  border: 1px solid grey;
+  padding: 10px 20px;
+  margin: 5px;
+  text-decoration: none;
+  color: white;
+  background-color: black;
+  border-radius: 10px;
+  font-family: 'Germania One', sans-serif;
+}
+.navbutton:hover {
+  color: black;
+  background-color: white;
+}
+.SMIcon{
+  width: 50px;
+  margin-top: 5px;
+}
+.SMIcon2{
+  width: 50px;
+}
+.bannerarea{
+  display: flex;
+  justify-content: center;
+}
+.banner{
+  width: 600px;
+  height: 300px;
+  border-radius: 10px;
+}
+
+h1{
+  text-align: center;
+}
+
+.content p {
+  line-height: 1.6;
+  text-align: justify;
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  padding: var(--medium-space) 0;
+}
+
+.solutions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.articleImg{
+  margin: 0 auto;
+  border-radius: 10px;
+  max-width: 400px;
+}
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  margin-top: 5px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+.wrapper {
+  background: url('/img/bg-content-960.jpg') center repeat-y;
+  background-size: 100% auto;
+  box-shadow: 0 0 4px 2px rgba(0,0,0,0.5);
+  margin: 0 auto;
+  padding-bottom: 30px;
+  width: 960px;}
+
+  .banner img {
+    display: block;
+    height: auto;
+    margin: 0 auto;
+    max-width: 100%;
+    width: auto;
+}
+
+.center{
+  margin: 0 auto;
+  width: 50%;
+}
+
+h2{
+  font-family: 'Germania One', sans-serif;
+}
+
+p{
+  font-family: 'Kalam', cursive;
+  margin: 0 auto;
+}
+
+.sch{
+  display: block;
+    height: auto;
+    margin: 0 auto;
+    max-width: 100%;
+    width: auto;
+}
+@media only screen and (max-width: 600px) {
+  .solutions {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
+  .articleImg {
+    margin: 0 auto;
+    max-width: 475px;
+  }
+  .navarea {
+    display: hidden;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .content {
+    margin: 50px;
+  }
+ 
+}
+.packing {
+  /* display: flex; */
+  align-items: center;
+  justify-content: space-between;
+}
