--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ h1{
   justify-content: space-between;
 }
 
-.articleImg{
+.content{
   margin: 0 auto;
   border-radius: 10px;
   max-width: 400px;
@@ -158,7 +158,7 @@ p{
   margin-right: auto;
   width: 50%;
   }
-  .articleImg {
+  .content {
     margin: 0 auto;
     max-width: 475px;
   }
